--- a/css/signup.css
+++ b/css/signup.css
@@ -107,6 +107,9 @@ span{
     margin-bottom:2em;
     padding:0.6em 0em 0.6em 1em;
     border-radius: 9px;
+    background-color: #404552;
+    border: none;
+    height: 25px;
 }
 form button {
     width:93%;
