--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+/* * {
+    border: 1px solid red;
+} */
+
 body {
     font: 15px/1.5 Arial, Helvetica, sans-serif;
     padding: 0;
@@ -412,4 +416,12 @@ span.raised-text {
     font-size: 15px;
     border-radius: 10px;
     text-align: center;
+}
+
+.space-evenly { 
+    justify-content: space-evenly; 
+  }
+
+.flex-item {
+    margin: 10px;
 }
