--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
-/* body {
+body {
   background-image: url(../Volunteer.ng/img/larm-rmah-AEaTUnvneik-unsplash.jpg);
   background-size: cover;
   background-position: center;
-  height: 100vh;
+  min-height: 100vh;
+  margin: 0;
 }
 
 .login-page {
@@ -49,4 +50,4 @@ h2 {
   text-align: center;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   padding-bottom: 10px;
-} */
+}
