--- a/css/style.css
+++ b/css/style.css
@@ -336,10 +336,10 @@ span.raised-text {
 .shadow {
     -webkit-box-shadow: 5px 5px 15px 5px #F1FFFA;
     box-shadow: 5px 5px 15px 5px #F1FFFA;
-    background: #F1FFFA;
+    background: #d0f6de;
     border: 0;
-    padding: 40px;
-    border-radius: 5px;
+    padding: 20px;
+    border-radius: 15px;
 }
 
 .entity {
@@ -359,7 +359,7 @@ span.raised-text {
     padding-top: 10px;
     padding-bottom: 10px;
     font-weight: 700;
-    font-size:13px;
+    font-size: 13px;
     color: #000000;
 }
 
@@ -367,7 +367,7 @@ span.raised-text {
     padding-top: 10px;
     padding-bottom: 10px;
     font-weight: bold;
-    font-size:14px;
+    font-size: 14px;
     color: #188038;
 }
 
@@ -375,7 +375,7 @@ span.raised-text {
     padding-top: 10px;
     padding-bottom: 10px;
     font-weight: 700;
-    font-size:13px;
+    font-size: 13px;
     color: #000000;
 }
 
@@ -411,5 +411,41 @@ span.raised-text {
     font-weight: bold;
     font-size: 15px;
     border-radius: 10px;
+    text-align: center;
+}
+
+/* About */
+
+.green {
+    padding: 15px;
+    background: #188038;
+    color: #ffffff;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+/* Sidebar */
+aside#sidebar {
+    float: right;
+    width: 30%;
+    margin-top: 10px;
+}
+
+aside#sidebar .quote input,
+aside#sidebar .quote textarea {
+    width: 90%;
+    padding: 5px;
+}
+
+/* Main-col */
+article#about-col {
+    float: left;
+    width: 65%;
+}
+
+.sponsors {
+    width: 90%;
+    display: flex;
+    flex-direction: row;
     text-align: center;
 }
