--- a/css/style.css
+++ b/css/style.css
@@ -190,6 +190,21 @@ header a:hover {
     border-radius: 5px;
 }
 
+#boxxes .boxx{
+    float: left;
+    text-align: center;
+    width: 30%;
+    padding: 5px;
+    padding-bottom: 25px;
+    margin: 4px;
+    /* border: 1px #ccfccb solid; */
+    /* border-radius: 5px; */
+}
+
+#boxxes{
+    padding-top: 50px;    
+}
+
 #boxes .box img {
     width: 180px;
     height: 90px;
