--- a/css/style.css
+++ b/css/style.css
@@ -16,9 +16,8 @@ ul {
     padding: 0;
 }
 
-
 .main_link_button {
-    height: 38px;
+    height: 42px;
     background: #188038;
     border: 0;
     padding-left: 20px;
@@ -74,9 +73,7 @@ a.link_button {
 .top-header .current a {
     color: #96e6b3;
     font-weight: bold;
-
 }
-
 
 /* Header **/
 header {
@@ -132,8 +129,9 @@ header a:hover {
 /* Main */
 #main {
     min-height: 400px;
-    background: url('../images/holding_hands.jpg') no-repeat 0 -500px;
+    background: url("../images/holding_hands.jpg") no-repeat 0 -220px;
     text-align: center;
+    background-size: cover;
     color: #ffffff;
 }
 
@@ -159,12 +157,12 @@ header a:hover {
     color: #ffffff;
 }
 
-
 /* What we Do */
 #what-we-do {
     min-height: 400px;
-    background: url('../images/holding_hands.jpg') no-repeat 0 -500px;
+    background: url("../images/african_school_kids.jpg") no-repeat 0 -200px;
     text-align: center;
+    background-size: cover;
     color: #ffffff;
 }
 
@@ -190,7 +188,7 @@ header a:hover {
     border-radius: 5px;
 }
 
-#boxxes .boxx{
+#boxxes .boxx {
     float: left;
     text-align: center;
     width: 30%;
@@ -201,8 +199,8 @@ header a:hover {
     /* border-radius: 5px; */
 }
 
-#boxxes{
-    padding-top: 50px;    
+#boxxes {
+    padding-top: 50px;
 }
 
 #boxes .box img {
@@ -215,7 +213,6 @@ header a:hover {
     padding-left: 18px;
     padding-bottom: 14px;
 }
-
 
 span.goal-text {
     float: left;
@@ -231,9 +228,8 @@ span.raised-text {
     font-size: 13px;
 }
 
-
 /* Media Queries */
-@media(max-width: 768px) {
+@media (max-width: 768px) {
 
     header #branding,
     header nav,
@@ -269,13 +265,12 @@ span.raised-text {
     #main h1 {
         margin-top: 40px;
     }
-
 }
 
 /* Moving Volunteer Icon */
 
 .moving-volunteer {
-    background: url('../images/volunteer_pattern.png');
+    background: url("../images/volunteer_pattern.png");
     background-size: 192px;
     -webkit-animation: moving 320s linear infinite;
     -o-animation: moving 320s linear infinite;
@@ -349,8 +344,8 @@ span.raised-text {
 }
 
 .shadow {
-    -webkit-box-shadow: 5px 5px 15px 5px #F1FFFA;
-    box-shadow: 5px 5px 15px 5px #F1FFFA;
+    -webkit-box-shadow: 5px 5px 15px 5px #f1fffa;
+    box-shadow: 5px 5px 15px 5px #f1fffa;
     background: #d0f6de;
     border: 0;
     padding: 20px;
@@ -396,7 +391,6 @@ span.raised-text {
 
 .entity-bottom-text {
     padding: 20px;
-
 }
 
 .entity-bottom-text span.entity-goal-text {
@@ -422,7 +416,7 @@ span.raised-text {
 .entity-donate-button a {
     background: #188038;
     padding: 12px;
-    color: #FFFFFF;
+    color: #ffffff;
     font-weight: bold;
     font-size: 15px;
     border-radius: 10px;
