--- a/css/render.css
+++ b/css/render.css
@@ -3,6 +3,7 @@
       font-size: 14px;
       margin: 0px 70px;
       border: 0;
+      box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
       font-weight: bold;
       padding-right: 0px;
       padding-left: 0px;
